Add Few More Recipes, Update Links in index.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lasagna</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1817031.jpg"
-     alt="An Image of Lasagna Dish">
+     alt="An Image of Lasagna Dish" width=50% height=50%>
      <h2>Description</h2>
      <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the 
          typical lasagna dish which is a dish made with several layers of lasagna sheets with 
@@ -24,7 +24,7 @@
         Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.
     </p>
 
-    <h3>Ingredients</h3>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 (16 ounce) package lasagna noodles</li>
         <li>1 pound lean ground beef</li>
@@ -36,7 +36,7 @@
         <li>1 pint ricotta cheese</li>
     </ul>
 
-    <h3>Directions</h3>
+    <h2>Directions</h2>
     <ol>
         <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
         <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
