--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/chelsea-buns.html">Chelsea Buns</a></li>
+        <li><a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
+    </ul>
 </body>
 </html>
