Add Navigation Buttons in recipes pages

--- a/recipes/chelsea-buns.html
+++ b/recipes/chelsea-buns.html
@@ -59,5 +59,8 @@
         
         <li>Bake in the preheated oven until the buns are golden brown and the centers are set, about 25 minutes.</li>
     </ol>
+    <a href="chelsea-buns.html">Back to top</a>
+    <br>
+    <a href="../index.html">Main Menu</a>
 </body>
 </html>
