--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -33,6 +33,10 @@
         <li>Meanwhile, remove chicken from marinade and saute in a large skillet until meat is white and juices run clear. When sauce is aromatic, add sauteed chicken to it and let simmer together until sauce thickens.</li>
     </ol>
 
+    <a href="kung-pao-chicken.html">Back to top</a>
+    <br>
+    <a href="../index.html">Main Menu</a>
+
 
 </body>
 </html>
