--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -44,5 +44,9 @@
         <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
     </ol>
 
+    <a href="lasagna.html">Back to top</a>
+    <br>
+    <a href="../index.html">Main Menu</a>
+
 </body>
 </html>
