--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 id="heading" class="Odin">Odin Recipes</h1>
+    <ul class="red list" id="recipes">
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/chelsea-buns.html">Chelsea Buns</a></li>
         <li><a href="recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
