--- a/recipes/chelsea-buns.html
+++ b/recipes/chelsea-buns.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Chelsea Buns</title>
 </head>
 <body>
@@ -59,8 +60,9 @@
         
         <li>Bake in the preheated oven until the buns are golden brown and the centers are set, about 25 minutes.</li>
     </ol>
-    <a href="chelsea-buns.html">Back to top</a>
-    <br>
-    <a href="../index.html">Main Menu</a>
+    <a href="chelsea-buns.html" class="nav">Back to top</a>
+    
+    <a href="../index.html" class="nav">Main Menu</a>
 </body>
 </html>
+
