--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Kung Pao Chicken</title>
 </head>
 <body>
@@ -33,9 +34,9 @@
         <li>Meanwhile, remove chicken from marinade and saute in a large skillet until meat is white and juices run clear. When sauce is aromatic, add sauteed chicken to it and let simmer together until sauce thickens.</li>
     </ol>
 
-    <a href="kung-pao-chicken.html">Back to top</a>
-    <br>
-    <a href="../index.html">Main Menu</a>
+    <a href="kung-pao-chicken.html" class="nav">Back to top</a>
+    
+    <a href="../index.html" class="nav">Main Menu</a>
 
 
 </body>
