--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Lasagna</title>
 </head>
 <body>
@@ -44,9 +45,9 @@
         <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
     </ol>
 
-    <a href="lasagna.html">Back to top</a>
-    <br>
-    <a href="../index.html">Main Menu</a>
+    <a href="lasagna.html" class="nav">Back to top</a>
+    
+    <a href="../index.html" class="nav">Main Menu</a>
 
 </body>
 </html>
